examples/test/testpolicy17172.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17172
  namespace: namespace198
spec:
  podSelector:
    matchLabels:
      key30: value37
      key20: value45
      key34: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value1
          key25: value32
          key21: value38
      podSelector:
        matchLabels:
          key14: value31
          key30: value22
